--- a/to-do-list/src/index.css
+++ b/to-do-list/src/index.css
@@ -1,5 +1,71 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: 'Abel', sans-serif;
+  width: 30%;
+  text-align: center;
+}
+
+h1 {
+  color: #474C52;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.items:first-of-type {
+  border: 1px solid light grey;
+}
+
+.item {
+  color: #474C52;
+  margin: 0 auto;
+  width: 50%;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid lightgrey;
+  position: relative;
+}
+
+.deleteItem {
+  cursor: pointer;
+  text-align: right;
+  position: absolute;
+  right: 10px;
+  top: 2px;
+  font-size: 10px;
+  color: rgba(27, 21, 21, .39);
+}
+
+.deleteItem:hover {
+  color: #474C52;
+  transition: .8s ease-in-out;
+  transform: scale(1.5);
+}
+
+.addInput {
+  padding: 8px 0;
+  width: 42.5%;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  border-style: none;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+}
+
+.addButton {
+  background-color: #00bb00;
+  margin-right: 15px;
+}
+
+.resetButton {
+  background-color: #d22000;
+  width: 20%;
+}
+
+.addButton, 
+.resetButton {
+  text-transform: uppercase;
+  padding: 10px;
+  color: white;
+  border-radius: 5px;
+  box-shadow:1px 1px 7px 1px #ccc;
+  cursor: pointer;
 }
